add_executable(countdown countdown.cpp)
add_executable(fibonacci_recursive fibonacci_recursive.cpp)
add_executable(generator generator.cpp)
add_executable(handler_sieve handler_sieve.cpp)
add_executable(iterator iterator.cpp)
add_executable(nqueens nqueens.cpp)
add_executable(parsing_dollars parsing_dollars.cpp)
add_executable(product_early product_early.cpp)
add_executable(resume_nontail resume_nontail.cpp)
add_executable(test_exception test_exception.cpp)
add_executable(tree_explore tree_explore.cpp)
add_executable(triples triples.cpp)
